# QMetaTcl

./: CMakeLists.txt  qmetatcl-qvariant.cpp  qmetatcl-qvariant.h  qmetatcl.cpp
